@@ -131,10 +131,10 @@ ld/
 	* scripttempl/elf.sc: Support sharable sections.
 
 diff --git a/bfd/elf-bfd.h b/bfd/elf-bfd.h
-index b8d82b1..7de224e 100644
+index faaf632..6f86144 100644
 --- a/bfd/elf-bfd.h
 +++ b/bfd/elf-bfd.h
-@@ -2139,6 +2139,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
+@@ -2144,6 +2144,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
    (bfd *, struct bfd_link_info *);
  extern bfd_boolean _bfd_elf_add_dynamic_entry
    (struct bfd_link_info *, bfd_vma, bfd_vma);
@@ -164,10 +164,10 @@ index b8d82b1..7de224e 100644
  extern bfd_boolean bfd_elf_link_record_dynamic_symbol
    (struct bfd_link_info *, struct elf_link_hash_entry *);
 diff --git a/bfd/elf.c b/bfd/elf.c
-index 17e9ad4..dee65f4 100644
+index 9cd3542..efe5e8e 100644
 --- a/bfd/elf.c
 +++ b/bfd/elf.c
-@@ -2093,6 +2093,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
+@@ -2094,6 +2094,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
    { STRING_COMMA_LEN (".gnu.liblist"),     0, SHT_GNU_LIBLIST, SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.conflict"),    0, SHT_RELA,        SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.hash"),        0, SHT_GNU_HASH,    SHF_ALLOC },
@@ -176,7 +176,7 @@ index 17e9ad4..dee65f4 100644
    { NULL,                        0,        0, 0,               0 }
  };
  
-@@ -2147,6 +2149,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
+@@ -2148,6 +2150,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
    /* See struct bfd_elf_special_section declaration for the semantics of
       this special case where .prefix_length != strlen (.prefix).  */
    { ".stabstr",			5,  3, SHT_STRTAB, 0 },
@@ -185,7 +185,7 @@ index 17e9ad4..dee65f4 100644
    { NULL,                       0,  0, 0,          0 }
  };
  
-@@ -3607,6 +3611,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
+@@ -3608,6 +3612,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
  	}
      }
  
@@ -218,7 +218,7 @@ index 17e9ad4..dee65f4 100644
    /* Let the backend count up any program headers it might need.  */
    bed = get_elf_backend_data (abfd);
    if (bed->elf_backend_additional_program_headers)
-@@ -3778,6 +3808,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -3779,6 +3809,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
        bfd_boolean phdr_in_segment = TRUE;
        bfd_boolean writable;
        int tls_count = 0;
@@ -227,7 +227,7 @@ index 17e9ad4..dee65f4 100644
        asection *first_tls = NULL;
        asection *dynsec, *eh_frame_hdr;
        bfd_size_type amt;
-@@ -4086,6 +4118,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4087,6 +4119,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  		first_tls = s;
  	      tls_count++;
  	    }
@@ -250,7 +250,7 @@ index 17e9ad4..dee65f4 100644
  	}
  
        /* If there are any SHF_TLS output sections, add PT_TLS segment.  */
-@@ -4113,6 +4161,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4114,6 +4162,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  	  pm = &m->next;
  	}
  
@@ -311,7 +311,7 @@ index 17e9ad4..dee65f4 100644
        /* If there is a .eh_frame_hdr section, throw in a PT_GNU_EH_FRAME
  	 segment.  */
        eh_frame_hdr = elf_tdata (abfd)->eh_frame_hdr;
-@@ -4654,6 +4756,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
+@@ -4655,6 +4757,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
  	  align = (bfd_size_type) 1 << bfd_get_section_alignment (abfd, sec);
  
  	  if ((p->p_type == PT_LOAD
@@ -320,10 +320,10 @@ index 17e9ad4..dee65f4 100644
  	      && (this_hdr->sh_type != SHT_NOBITS
  		  || ((this_hdr->sh_flags & SHF_ALLOC) != 0
 diff --git a/bfd/elf32-i386.c b/bfd/elf32-i386.c
-index fce70b9..202ffef 100644
+index 01e50a4..f433ddf 100644
 --- a/bfd/elf32-i386.c
 +++ b/bfd/elf32-i386.c
-@@ -813,6 +813,9 @@ struct elf_i386_link_hash_table
+@@ -819,6 +819,9 @@ struct elf_i386_link_hash_table
  
    /* The index of the next unused R_386_IRELATIVE slot in .rel.plt.  */
    bfd_vma next_irelative_index;
@@ -333,7 +333,7 @@ index fce70b9..202ffef 100644
  };
  
  /* Get the i386 ELF linker hash table from a link_info structure.  */
-@@ -955,6 +958,8 @@ elf_i386_link_hash_table_create (bfd *abfd)
+@@ -961,6 +964,8 @@ elf_i386_link_hash_table_create (bfd *abfd)
    ret->tls_module_base = NULL;
    ret->next_jump_slot_index = 0;
    ret->next_irelative_index = 0;
@@ -342,7 +342,7 @@ index fce70b9..202ffef 100644
  
    ret->loc_hash_table = htab_try_create (1024,
  					 elf_i386_local_htab_hash,
-@@ -1003,10 +1008,19 @@ elf_i386_create_dynamic_sections (bfd *dynobj, struct bfd_link_info *info)
+@@ -1009,10 +1014,19 @@ elf_i386_create_dynamic_sections (bfd *dynobj, struct bfd_link_info *info)
  
    htab->sdynbss = bfd_get_linker_section (dynobj, ".dynbss");
    if (!info->shared)
@@ -364,7 +364,7 @@ index fce70b9..202ffef 100644
      abort ();
  
    if (get_elf_i386_backend_data (dynobj)->is_vxworks
-@@ -2146,17 +2160,23 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -2165,17 +2179,23 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
       both the dynamic object and the regular object will refer to the
       same memory location for the variable.  */
  
@@ -391,7 +391,7 @@ index fce70b9..202ffef 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2877,6 +2897,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd, struct bfd_link_info *info)
+@@ -2914,6 +2934,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd, struct bfd_link_info *info)
  	       || s == htab->elf.iplt
  	       || s == htab->elf.igotplt
  	       || s == htab->plt_eh_frame
@@ -399,7 +399,7 @@ index fce70b9..202ffef 100644
  	       || s == htab->sdynbss)
  	{
  	  /* Strip these too.  */
-@@ -4665,20 +4686,26 @@ do_glob_dat:
+@@ -4716,20 +4737,26 @@ do_glob_dat:
    if (h->needs_copy)
      {
        Elf_Internal_Rela rel;
@@ -428,7 +428,7 @@ index fce70b9..202ffef 100644
      }
  
    return TRUE;
-@@ -4997,7 +5024,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -5048,7 +5075,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
  	  || ELF_ST_BIND (sym->st_info) == STB_GNU_UNIQUE))
      elf_tdata (info->output_bfd)->has_gnu_symbols = TRUE;
  
@@ -438,7 +438,7 @@ index fce70b9..202ffef 100644
  }
  
  #define TARGET_LITTLE_SYM		bfd_elf32_i386_vec
-@@ -5051,6 +5079,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -5102,6 +5130,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
  #undef	elf_backend_post_process_headers
  #define	elf_backend_post_process_headers	_bfd_elf_set_osabi
  
@@ -459,10 +459,10 @@ index fce70b9..202ffef 100644
  
  /* FreeBSD support.  */
 diff --git a/bfd/elf64-x86-64.c b/bfd/elf64-x86-64.c
-index a37f793..f301227 100644
+index 71f33e2..07f83c5 100644
 --- a/bfd/elf64-x86-64.c
 +++ b/bfd/elf64-x86-64.c
-@@ -763,6 +763,9 @@ struct elf_x86_64_link_hash_table
+@@ -769,6 +769,9 @@ struct elf_x86_64_link_hash_table
    bfd_vma next_jump_slot_index;
    /* The index of the next R_X86_64_IRELATIVE entry in .rela.plt.  */
    bfd_vma next_irelative_index;
@@ -472,7 +472,7 @@ index a37f793..f301227 100644
  };
  
  /* Get the x86-64 ELF linker hash table from a link_info structure.  */
-@@ -906,6 +909,8 @@ elf_x86_64_link_hash_table_create (bfd *abfd)
+@@ -912,6 +915,8 @@ elf_x86_64_link_hash_table_create (bfd *abfd)
    ret->tls_module_base = NULL;
    ret->next_jump_slot_index = 0;
    ret->next_irelative_index = 0;
@@ -481,7 +481,7 @@ index a37f793..f301227 100644
  
    if (ABI_64_P (abfd))
      {
-@@ -972,10 +977,19 @@ elf_x86_64_create_dynamic_sections (bfd *dynobj,
+@@ -978,10 +983,19 @@ elf_x86_64_create_dynamic_sections (bfd *dynobj,
  
    htab->sdynbss = bfd_get_linker_section (dynobj, ".dynbss");
    if (!info->shared)
@@ -503,7 +503,7 @@ index a37f793..f301227 100644
      abort ();
  
    if (!info->no_ld_generated_unwind_info
-@@ -2202,6 +2216,8 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -2223,6 +2237,8 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
    if (htab == NULL)
      return FALSE;
  
@@ -512,7 +512,7 @@ index a37f793..f301227 100644
    /* We must generate a R_X86_64_COPY reloc to tell the dynamic linker
       to copy the initial value out of the dynamic object and into the
       runtime process image.  */
-@@ -2209,12 +2225,16 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -2230,12 +2246,16 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
      {
        const struct elf_backend_data *bed;
        bed = get_elf_backend_data (info->output_bfd);
@@ -532,7 +532,7 @@ index a37f793..f301227 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2913,6 +2933,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
+@@ -2952,6 +2972,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
  	  || s == htab->elf.iplt
  	  || s == htab->elf.igotplt
  	  || s == htab->plt_eh_frame
@@ -540,7 +540,7 @@ index a37f793..f301227 100644
  	  || s == htab->sdynbss)
  	{
  	  /* Strip this section if we don't need it; see the
-@@ -4595,13 +4616,19 @@ do_glob_dat:
+@@ -4663,13 +4684,19 @@ do_glob_dat:
    if (h->needs_copy)
      {
        Elf_Internal_Rela rela;
@@ -561,7 +561,7 @@ index a37f793..f301227 100644
  	abort ();
  
        rela.r_offset = (h->root.u.def.value
-@@ -4609,7 +4636,7 @@ do_glob_dat:
+@@ -4677,7 +4704,7 @@ do_glob_dat:
  		       + h->root.u.def.section->output_offset);
        rela.r_info = htab->r_info (h->dynindx, R_X86_64_COPY);
        rela.r_addend = 0;
@@ -570,7 +570,7 @@ index a37f793..f301227 100644
      }
  
    return TRUE;
-@@ -4942,7 +4969,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
+@@ -5010,7 +5037,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
  	  || ELF_ST_BIND (sym->st_info) == STB_GNU_UNIQUE))
      elf_tdata (info->output_bfd)->has_gnu_symbols = TRUE;
  
@@ -580,7 +580,7 @@ index a37f793..f301227 100644
  }
  
  
-@@ -4958,7 +4986,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -5026,7 +5054,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
        *index_return = SHN_X86_64_LCOMMON;
        return TRUE;
      }
@@ -590,7 +590,7 @@ index a37f793..f301227 100644
  }
  
  /* Process a symbol.  */
-@@ -4976,22 +5005,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -5044,22 +5073,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
        asym->value = elfsym->internal_elf_sym.st_size;
        /* Common symbol doesn't set BSF_GLOBAL.  */
        asym->flags &= ~BSF_GLOBAL;
@@ -619,7 +619,7 @@ index a37f793..f301227 100644
    else
      return SHN_X86_64_LCOMMON;
  }
-@@ -5000,7 +5033,7 @@ static asection *
+@@ -5068,7 +5101,7 @@ static asection *
  elf_x86_64_common_section (asection *sec)
  {
    if ((elf_section_flags (sec) & SHF_X86_64_LARGE) == 0)
@@ -628,7 +628,7 @@ index a37f793..f301227 100644
    else
      return &_bfd_elf_large_com_section;
  }
-@@ -5037,7 +5070,8 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -5105,7 +5138,8 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
        && h->root.type == bfd_link_hash_common
        && !*newdef
        && bfd_is_com_section (*sec)
@@ -638,7 +638,7 @@ index a37f793..f301227 100644
      {
        if (sym->st_shndx == SHN_COMMON
  	  && (elf_section_flags (*oldsec) & SHF_X86_64_LARGE) != 0)
-@@ -5045,13 +5079,26 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -5113,13 +5147,26 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
  	  h->root.u.c.p->section
  	    = bfd_make_section_old_way (oldbfd, "COMMON");
  	  h->root.u.c.p->section->flags = SEC_ALLOC;
@@ -668,7 +668,7 @@ index a37f793..f301227 100644
  
  static int
 diff --git a/bfd/elflink.c b/bfd/elflink.c
-index 661b2eb..066b2b7 100644
+index d336730..5874371 100644
 --- a/bfd/elflink.c
 +++ b/bfd/elflink.c
 @@ -386,6 +386,27 @@ _bfd_elf_create_dynamic_sections (bfd *abfd, struct bfd_link_info *info)
@@ -954,10 +954,10 @@ index afa1e04..95d6584 100644
     SHF_LINK_ORDER. But it doesn't set the sh_link or sh_info fields.
     We don't want to flood users with so many error messages. We turn
 diff --git a/binutils/readelf.c b/binutils/readelf.c
-index 7877539..4a9ba1b 100644
+index ae211a7..5ba76cd 100644
 --- a/binutils/readelf.c
 +++ b/binutils/readelf.c
-@@ -1375,6 +1375,8 @@ dump_relocations (FILE * file,
+@@ -1379,6 +1379,8 @@ dump_relocations (FILE * file,
  			sec_name = "ABS";
  		      else if (psym->st_shndx == SHN_COMMON)
  			sec_name = "COMMON";
@@ -966,7 +966,7 @@ index 7877539..4a9ba1b 100644
  		      else if ((elf_header.e_machine == EM_MIPS
  				&& psym->st_shndx == SHN_MIPS_SCOMMON)
  			       || (elf_header.e_machine == EM_TI_C6000
-@@ -2940,6 +2942,7 @@ get_segment_type (unsigned long p_type)
+@@ -2947,6 +2949,7 @@ get_segment_type (unsigned long p_type)
      case PT_SHLIB:	return "SHLIB";
      case PT_PHDR:	return "PHDR";
      case PT_TLS:	return "TLS";
@@ -974,7 +974,7 @@ index 7877539..4a9ba1b 100644
  
      case PT_GNU_EH_FRAME:
  			return "GNU_EH_FRAME";
-@@ -9131,6 +9134,8 @@ get_symbol_index_type (unsigned int type)
+@@ -9134,6 +9137,8 @@ get_symbol_index_type (unsigned int type)
      case SHN_UNDEF:	return "UND";
      case SHN_ABS:	return "ABS";
      case SHN_COMMON:	return "COM";
@@ -1077,10 +1077,10 @@ index bf44dee..b8a3742 100644
       flags.  */
    unsigned int execstack: 1;
 diff --git a/include/elf/common.h b/include/elf/common.h
-index 4399d02..38ceb94 100644
+index 2bae603..235c92a 100644
 --- a/include/elf/common.h
 +++ b/include/elf/common.h
-@@ -434,6 +434,7 @@
+@@ -435,6 +435,7 @@
  #define PT_SUNW_EH_FRAME PT_GNU_EH_FRAME      /* Solaris uses the same value */
  #define PT_GNU_STACK	(PT_LOOS + 0x474e551) /* Stack flags */
  #define PT_GNU_RELRO	(PT_LOOS + 0x474e552) /* Read-only after relocation */
@@ -1088,7 +1088,7 @@ index 4399d02..38ceb94 100644
  
  /* Program segment permissions, in program header p_flags field.  */
  
-@@ -516,6 +517,8 @@
+@@ -517,6 +518,8 @@
  					   are not to be further
  					   relocated.  */
  
@@ -1097,7 +1097,7 @@ index 4399d02..38ceb94 100644
  /* Values of note segment descriptor types for core files.  */
  
  #define NT_PRSTATUS	1		/* Contains copy of prstatus struct */
-@@ -676,6 +679,9 @@
+@@ -684,6 +687,9 @@
  #define STT_LOPROC	13		/* Processor-specific semantics */
  #define STT_HIPROC	15		/* Processor-specific semantics */
  
@@ -1108,11 +1108,11 @@ index 4399d02..38ceb94 100644
     become part of an executable or shared library.  */
  
 diff --git a/ld/emulparams/elf32_x86_64.sh b/ld/emulparams/elf32_x86_64.sh
-index bc77c85..3dad61e 100644
+index d34297b..9fb8982 100644
 --- a/ld/emulparams/elf32_x86_64.sh
 +++ b/ld/emulparams/elf32_x86_64.sh
-@@ -15,6 +15,7 @@ NO_SMALL_DATA=yes
- LARGE_SECTIONS=yes
+@@ -16,6 +16,7 @@ LARGE_SECTIONS=yes
+ LARGE_BSS_AFTER_BSS=
  SEPARATE_GOTPLT="SIZEOF (.got.plt) >= 24 ? 24 : 0"
  IREL_IN_PLT=
 +SHARABLE_SECTIONS=yes
@@ -1141,11 +1141,11 @@ index add700f..dc2d6ef 100644
  # Linux modify the default library search path to first include
  # a 32-bit specific directory.
 diff --git a/ld/emulparams/elf_x86_64.sh b/ld/emulparams/elf_x86_64.sh
-index f1b60cb..f41afab 100644
+index 4842257..e9cd479 100644
 --- a/ld/emulparams/elf_x86_64.sh
 +++ b/ld/emulparams/elf_x86_64.sh
-@@ -15,6 +15,7 @@ NO_SMALL_DATA=yes
- LARGE_SECTIONS=yes
+@@ -16,6 +16,7 @@ LARGE_SECTIONS=yes
+ LARGE_BSS_AFTER_BSS=
  SEPARATE_GOTPLT="SIZEOF (.got.plt) >= 24 ? 24 : 0"
  IREL_IN_PLT=
 +SHARABLE_SECTIONS=yes
@@ -1153,7 +1153,7 @@ index f1b60cb..f41afab 100644
  if [ "x${host}" = "x${target}" ]; then
    case " $EMULATION_LIBPATH " in
 diff --git a/ld/emultempl/elf32.em b/ld/emultempl/elf32.em
-index d30a0ad..ca23c49 100644
+index 13a1a41..b7b9aed 100644
 --- a/ld/emultempl/elf32.em
 +++ b/ld/emultempl/elf32.em
 @@ -105,6 +105,7 @@ gld${EMULATION_NAME}_before_parse (void)
@@ -1161,10 +1161,10 @@ index d30a0ad..ca23c49 100644
    config.has_shared = `if test -n "$GENERATE_SHLIB_SCRIPT" ; then echo TRUE ; else echo FALSE ; fi`;
    config.separate_code = `if test "x${SEPARATE_CODE}" = xyes ; then echo TRUE ; else echo FALSE ; fi`;
 +  link_info.sharable_sections = `if test "$SHARABLE_SECTIONS" = "yes" ; then echo TRUE ; else echo FALSE ; fi`;
- }
- 
  EOF
-@@ -1817,6 +1818,12 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+ 
+ case ${target} in
+@@ -1828,6 +1829,12 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
    int iself = s->owner->xvec->flavour == bfd_target_elf_flavour;
    unsigned int sh_type = iself ? elf_section_type (s) : SHT_NULL;
  
@@ -1190,10 +1190,10 @@ index c23c554..b41c015 100644
    ldfile_add_arch ("");
    emulation = get_emulation (argc, argv);
 diff --git a/ld/scripttempl/elf.sc b/ld/scripttempl/elf.sc
-index cb162e8..f4a6db5 100644
+index bbff233..e495a0f 100644
 --- a/ld/scripttempl/elf.sc
 +++ b/ld/scripttempl/elf.sc
-@@ -299,6 +299,40 @@ STACK="  .stack        ${RELOCATING-0}${RELOCATING+${STACK_ADDR}} :
+@@ -298,6 +298,40 @@ STACK="  .stack        ${RELOCATING-0}${RELOCATING+${STACK_ADDR}} :
      ${RELOCATING+${USER_LABEL_PREFIX}_stack = .;}
      *(.stack)
    }"
@@ -1234,7 +1234,7 @@ index cb162e8..f4a6db5 100644
  
  TEXT_START_ADDR="SEGMENT_START(\"text-segment\", ${TEXT_START_ADDR})"
  SHLIB_TEXT_START_ADDR="SEGMENT_START(\"text-segment\", ${SHLIB_TEXT_START_ADDR:-0})"
-@@ -393,6 +427,7 @@ eval $COMBRELOCCAT <<EOF
+@@ -392,6 +426,7 @@ eval $COMBRELOCCAT <<EOF
    .rel.got      ${RELOCATING-0} : { *(.rel.got) }
    .rela.got     ${RELOCATING-0} : { *(.rela.got) }
    ${OTHER_GOT_RELOC_SECTIONS}
